--- a/package.json
+++ b/package.json
@@ -9,11 +9,12 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@tailwindcss/postcss": "^4.1.5",
+    "dayjs": "^1.11.13",
     "firebase": "^11.6.1",
     "next": "15.3.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
-    "@tailwindcss/postcss": "^4.1.5",
     "tailwindcss": "^4.1.5"
   },
   "devDependencies": {
