--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@tailwindcss/postcss": "^4.1.5",
     "dayjs": "^1.11.13",
     "firebase": "^11.6.1",
+    "framer-motion": "^12.10.1",
     "next": "15.3.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
